[gd_scene load_steps=6 format=3 uid="uid://ccvk7imdhwqs0"]

[ext_resource type="Script" path="res://gate_handler.gd" id="1_h5rsh"]
[ext_resource type="Script" path="res://main_window.gd" id="1_hc54m"]
[ext_resource type="Script" path="res://gate_button.gd" id="2_3ldpm"]
[ext_resource type="Script" path="res://MenuButton.gd" id="2_x6e4v"]
[ext_resource type="Script" path="res://Graph.gd" id="3_3qtky"]

[node name="GraphView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hc54m")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MenuButton" type="MenuButton" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Menu"
item_count = 3
popup/item_0/text = "Load Graph"
popup/item_0/id = 0
popup/item_1/text = "Save Graph"
popup/item_1/id = 1
popup/item_2/text = "Quit"
popup/item_2/id = 2
script = ExtResource("2_x6e4v")

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/MenuButton"]
visible = false
top_level = true
layout_mode = 2
offset_top = 38.0
offset_right = 108.0
offset_bottom = 69.0
size_flags_horizontal = 0
size_flags_vertical = 6
placeholder_text = "Graph Name"
expand_to_text_length = true

[node name="PopupMenu" type="PopupMenu" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/MenuButton"]

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 1
script = ExtResource("1_h5rsh")

[node name="NOT" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "NOT"
script = ExtResource("2_3ldpm")

[node name="ID" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ID"
script = ExtResource("2_3ldpm")

[node name="Input" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Input"
script = ExtResource("2_3ldpm")

[node name="Output" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Output"
script = ExtResource("2_3ldpm")

[node name="Graph" type="GraphEdit" parent="."]
layout_mode = 2
size_flags_vertical = 3
right_disconnects = true
script = ExtResource("3_3qtky")

[connection signal="text_submitted" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/MenuButton/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="index_pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/MenuButton/PopupMenu" to="." method="_on_popup_menu_index_pressed"]
[connection signal="connection_request" from="Graph" to="." method="_on_graph_connection_request"]
[connection signal="delete_nodes_request" from="Graph" to="." method="_on_graph_delete_nodes_request"]
[connection signal="disconnection_request" from="Graph" to="." method="_on_graph_disconnection_request"]
[connection signal="node_deselected" from="Graph" to="." method="_on_graph_node_deselected"]
[connection signal="node_selected" from="Graph" to="." method="_on_graph_node_selected"]
